# Cinetrack

./: .env.example  .env.production.example  .gitignore  AGENT.md  LICENSE  NOTICE  README.md  docker-compose.yml  production.docker-compose.yaml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql  0002_translations.sql  0003_relax_catalog_fks.sql  0004_user_external_id.sql  0005_drop_emotion.sql  0006_episode_listing.sql  0007_user_show_unavailable.sql  0008_watch_event_user_source.sql  0009_user_show_import_name.sql  0010_import_match.sql  0011_catalog_facets.sql  0012_user_import_stats.sql  0013_user_movie.sql  0014_social_privacy.sql  0015_user_show_rating.sql  0016_profile_blocks.sql  0017_unique_screen_name.sql  0018_search_aliases.sql  0019_sync_queue.sql  0020_drop_artwork_s3_key.sql  0021_origin_country.sql  0022_auth_security.sql  0023_audit_log.sql  0024_sessions.sql  0025_user_uuid.sql  0026_invitation_id_code.sql  0027_user_languages.sql  0028_profile_movies_block.sql  0029_enable_profile_movies_block.sql  0030_episode_translations_synced.sql  0031_import_movie.sql  0032_show_rating_5.sql  0033_user_movie_watchlist.sql  0034_import_movie_watchlist.sql  0035_user_movie_rating.sql  0036_raw_translations.sql  0037_backfill_artwork.sql  0038_entity_alias.sql  0039_translation_search_index.sql  0040_drop_dead_columns.sql  (+2 more)
backend/src/: audit.rs  config.rs  email.rs  email_templates.rs  error.rs  lib.rs  main.rs  profile.rs  state.rs
backend/src/auth/: extractor.rs  mod.rs  password.rs  ratelimit.rs  session.rs  tests.rs  token.rs
backend/src/catalog/: alias.rs  artwork.rs  discover.rs  episode.rs  facets.rs  mod.rs  movie.rs  (+6 more)
backend/tests/: integration.rs
(+161 files in other folders)
