[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio", "tls-rustls", "postgres", "json", "macros", "migrate",
] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
dotenvy = "0.15"
csv = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
argon2 = "0.5"
jsonwebtoken = "9"
rand_core = { version = "0.6.4", features = ["getrandom"] }
tower-http = { version = "0.6", features = ["cors"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v7"] }
lettre = { version = "0.11", default-features = false, features = [
    "smtp-transport", "tokio1", "tokio1-rustls-tls", "builder", "hostname",
] }

[dev-dependencies]
# Integration tests (backend/tests/) drive the library's real DB queries against
# a throwaway Postgres (TEST_DATABASE_URL); they need these directly.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio", "tls-rustls", "postgres", "json", "macros",
] }
serde_json = "1"
dotenvy = "0.15"
